# agentic-user-api

./: .gitignore  Makefile  README.md  pyproject.toml
api/: auth.py  dynamodb_client.py  models.py  s3_client.py  user_handler.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  tfplan  variables.tf
